...
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tv_login_title"
        app:layout_constraintTop_toBottomOf="@id/tv_login_title" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="305dp"
        android:layout_height="48dp"
        android:autofillHints="username"
        android:backgroundTint="#00BCD4"
        android:gravity="start"
        android:hint="@string/user_string"
...
        android:text="@string/password_string"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tv_login_title"
        app:layout_constraintTop_toBottomOf="@id/et_username" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="305dp"
        android:layout_height="48dp"
        android:layout_marginStart="12dp"
        android:autofillHints="password"
        android:backgroundTint="#00BCD4"
        android:gravity="start"
...
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/et_username"
        app:layout_constraintStart_toStartOf="@id/tv_password"
        app:layout_constraintTop_toBottomOf="@id/tv_password" />

    <Button
        android:id="@+id/bt_login"
        android:layout_width="173dp"
        android:layout_height="52dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="#FFEB3B"
        android:text="Inicar Sesion"
        android:textAllCaps="false"
        android:textColor="#2A2929"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <Button
        android:id="@+id/bt_register"
        android:layout_width="165dp"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#8BC34A"
        android:text="Unete!"
        android:textAllCaps="false"
        android:textColor="#2A2929"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
...
